--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI = mongodb+srv://brokersphere-data:realestate-agent@brokersphere.gudt4.mongodb.net/?retryWrites=true&w=majority
+PORT = 5000
